# dottxt-python

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: cli.md  client.md
examples/: generate_dataclass.py  generate_genson.py  generate_json_schema.py  generate_pydantic.py  generate_typed_dict.py  list_messages_input.py  list_models.py  openai_chat_completions.py
src/dottxt/: __init__.py  cli.py  client.py  schemas.py
tests/: test_cli.py  test_cli_helpers.py  test_client.py  test_schemas.py
